--- a/sass/_body.scss
+++ b/sass/_body.scss
@@ -2,8 +2,7 @@ body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    // background-color: #FFFCF8;
-    background-color: gray;
+    background-color: #FFFCF8;
     font-family: sans-serif;
     @include flex-between;
 }
